# mayon

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  eslint.config.js  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts  vitest.global-setup.ts  vitest.global-teardown.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docker/: nginx.conf
docs/: _quarto.yml  contributing.qmd  getting-started.qmd  index.qmd
drizzle/: 0000_curved_frog_thor.sql  0000_needy_dark_beast.sql  0000_superb_energizer.sql  0001_parched_thundra.sql  0002_slimy_proudstar.sql  0003_overjoyed_silk_fever.sql  0004_white_namor.sql  0005_gorgeous_living_tribunal.sql  0006_search_fts.sql  0007_glossy_queen_noir.sql
prompts/: start.md
refinement/: 2026-07-04 refinement plan.md  2026-07-05 user-journey-audit.md  2026-07-06_notes on use.md  2026-07-07_packaging-release-and-oss-plan.md  2026-07-07_user-defined-mcp-servers-plan.md  2026-07-07_user-defined-mcp-servers.md  2026-07-12_migrating-away-from-SQLite WASM.md  2026-07-12_postgres-migration-plan.md  2026-07-19_expound-source-map.md  2026-07-20_smoothness-perf-program.md  2026-07-20_user_feedback.md  agentic-capabilities.md  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  keys.rs  lib.rs  mcp.rs  transport.rs
(+457 files in other folders)
